--- a/side_project/mini_board/src/css/delete.css
+++ b/side_project/mini_board/src/css/delete.css
@@ -11,7 +11,7 @@
     font-size: 1.2rem;
     color: #fff;
     font-weight: 900;
-    height: 50px;
+    min-height: 50px;
 }
 
 .box-title {
@@ -29,6 +29,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 
 .main-content {
