--- a/side_project/movie_review/doc/design/css/index.css
+++ b/side_project/movie_review/doc/design/css/index.css
@@ -10,14 +10,14 @@
     height: 500px;
     position: absolute;
     top: 0;
-    animation: curtain 5s ease-in-out;
+    animation: curtain 5s ease-out;
 }
 
 .start-page_title {
     color: #fff;
     text-align: center;
     padding-top: 250px;
-    animation: title 6s ease-in both;    
+    animation: title 5s ease-in both;    
 }
 
 .start-page_btn {
