241001 movie_review DB 연동중

--- a/side_project/movie_review/src/css/main.css
+++ b/side_project/movie_review/src/css/main.css
@@ -15,7 +15,7 @@
     display: none;
 }
 
-.box-size:hover + .img_display {
+img:hover + .img_display {
     display: block;
 }
 
@@ -25,7 +25,7 @@
     background-color: #000;
     opacity: 0.8;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
