--- a/side_project/movie_review/src/css/common.css
+++ b/side_project/movie_review/src/css/common.css
@@ -91,6 +91,10 @@ input[type="file"]::file-selector-button:hover {
     background-color: #E57813;
 }
 
+p {
+    color: #FAF5E2;
+}
+
 /* button */
 .btn-style {
     background-color: #802311;
