--- a/side_project/movie_review/src/css/update.css
+++ b/side_project/movie_review/src/css/update.css
@@ -23,7 +23,7 @@ input {
     font-weight: 100;
 }
 
-.update-page_img {
+.update-page_poster_img {
     width: 250px;
     height: 350px;
     margin-top: 20px;
